--- a/text/gf2021-sopo.Rmd
+++ b/text/gf2021-sopo.Rmd
@@ -61,9 +61,35 @@ p_thresh <- readRDS(here("data-generated/p-thresh.rds"))
 
 # A state-space time-series model of groundfish stock status
 
-The Groundfish Section at Pacific Biological Station conducts regular stock assessment of...
-These assessments take into account...
-Here, we develop a Bayesian hierarchical time-series model to explore trends in
+The Fisheries and Oceans Canada (DFO) Groundfish Section conducts a suite of
+randomized surveys using bottom trawl, longline hook, and longline trap gear
+that, in aggregate, provide coverage for all offshore waters of Canada's
+Pacific Coast. Surveys in Queen Charlotte Sound and Hecate Strait are conducted
+in odd numbered years and the West Coast of Vancouver Island (WCVI) and the
+West Coast of Haida Gwaii surveys are conducted in even numbered years. In
+addition to the bottom trawl surveys, two Hard Bottom Longline (HBLL) surveys
+are conducted, one in "inside" waters (east of Vancouver Island) and another in
+"outside" waters (everything else). Each year the surveys alternate between
+northern and southern areas (the northern areas were surveyed in 2019). Lastly,
+a coast-wide longline trap survey targeting sablefish is conducted every year.
+In addition to the random depth-stratified surveys, the Groundfish Section
+collects additional information from the International Pacific Halibut
+Commission (IPHC) Setline Survey. In 2020, the West Coast Haida Gwaii trawl
+survey, HBLL south survey, the IPHC setline survey, and the sablefish survey
+were conducted. The WCVI survey did not run due to COVID-19.
+
+Recent amendments to the *Fisheries Act* via the Fish Stocks provisions have
+resulted in an increased focus on stock status with respect to biological
+reference points.
+
+Scientist from the Stock Assessment and Research Division conduct regular stock
+assessment of major fish stocks in BC. These assessments take into account...
+and assess status with respect to reference points...
+
+Here, we gather output data from these assessments representing the full
+posterior distribution of biomass compared to three measures of stock status...
+
+We develop a Bayesian state-space time-series model to explore trends in
 overall status across stocks up until the year 2020...
 
 We model three measures of stock status:
@@ -100,9 +126,11 @@ where $\hat{y}_{j,t}$ is the mean log stock status for stock $j$
 and time $t$ (from an assessment), $y_{j,t}$ is the unobserved "true" mean stock-specific status,
 and $\hat{\tau}$ is the standard deviation of the log stock status from an assessment.
 We group Pacific Cod and Walleye Pollock stocks to share a $\rho$ and $\sigma_{\epsilon}$
-and all other stock to share another $\rho$ and $\sigma_{\epsilon}$ (stock trajectories were considerably more "wiggly" for these species).
+and all other stock to share another $\rho$ and $\sigma_{\epsilon}$ (stock
+trajectories were considerably more "wiggly" for these species).
 The symbol $\alpha_j$ represents a stock-specific intercept
-that is constrained such that the sum of all $\alpha_j$ is zero to make the overall mean $x_t$ identifiable.
+that is constrained such that the sum of all $\alpha_j$ is zero to make the
+overall mean $x_t$ identifiable.
 The symbol $\epsilon_{j,t}$ represents a first-order autoregressive (AR1) deviation
 with correlation $\rho$ and standard deviation $\sigma_\epsilon$.
 We place half-Normal(0, 1) priors on $\sigma_{\epsilon}$ and $\sigma_{\eta}$,
@@ -138,14 +166,18 @@ Main results here; quick bullets for now
   considerable variation within some stocks (e.g., Pacific Cod, Walleye
   Pollock, and Redstripe Rockfish stocks)
 
-- Overall mean B/LRP is estimated to be `r med1(blrp$.value)` (95% CI: `r lwr1(blrp$.value)`--`r upr1(blrp$.value)`) in 2020, and we note
+- Overall mean B/LRP is estimated to be `r med1(blrp$.value)` (95% CI: `r
+  lwr1(blrp$.value)`--`r upr1(blrp$.value)`) in 2020, and we note
   the increased uncertainty in the last few years due to not all assessments
   being current (Figure \@ref(fig:overall)).
 
-- Overall mean B/USR and B/B~MSY~ are estimated at `r med1(busr$.value)` (95% CI: `r lwr1(busr$.value)`--`r upr1(busr$.value)`) and `r med1(bbmsy$.value)` (95% CI: `r lwr1(bbmsy$.value)`--`r upr1(bbmsy$.value)`) in 2020
+- Overall mean B/USR and B/B~MSY~ are estimated at `r med1(busr$.value)` (95%
+  CI: `r lwr1(busr$.value)`--`r upr1(busr$.value)`) and `r med1(bbmsy$.value)`
+  (95% CI: `r lwr1(bbmsy$.value)`--`r upr1(bbmsy$.value)`) in 2020
 
--  `r sum(p_thresh$p_usr > 0.25)`/`r nrow(p_thresh)` in Figure \@ref(fig:ridges) stocks had > 25% probability of being below their USR as of the last
-  date of assessment
+-  `r sum(p_thresh$p_usr > 0.25)`/`r nrow(p_thresh)` in Figure
+  \@ref(fig:ridges) stocks had > 25% probability of being below their USR as of
+  the last date of assessment
 
 ```{r pcod, include=FALSE}
 pcod3cd <- filter(p_thresh, stock_clean == "Pacific Cod 3CD") %>% pull(p_lrp)
