--- a/text/gf2021-sopo.Rmd
+++ b/text/gf2021-sopo.Rmd
@@ -25,10 +25,10 @@ library(here)
 opts_chunk$set(echo = FALSE, message = FALSE, warnings = FALSE)
 
 status_dat <- readRDS(here("data-generated/x_t_posterior.rds"))
-status <- filter(status_dat, year == 2020)
-blrp <- filter(status, ratio == "B/LRP")
-busr <- filter(status, ratio == "B/USR")
-bbmsy <- filter(status, ratio == "B/B[MSY]")
+status <- dplyr::filter(status_dat, year == 2020)
+blrp <- dplyr::filter(status, ratio == "B/LRP")
+busr <- dplyr::filter(status, ratio == "B/USR")
+bbmsy <- dplyr::filter(status, ratio == "B/B[MSY]")
 
 med1 <- function(x) {
   sprintf("%.1f", round(median(x), 1))
@@ -59,30 +59,38 @@ p_thresh <- readRDS(here("data-generated/p-thresh.rds"))
 
 - Something about the overall estimated mean status as of 2020
 
-# A state-space time-series model of groundfish stock status
+# Fisheries-independent groundfish surveys
 
 The Fisheries and Oceans Canada (DFO) Groundfish Section conducts a suite of
 randomized surveys using bottom trawl, longline hook, and longline trap gear
 that, in aggregate, provide coverage for all offshore waters of Canada's
-Pacific Coast. Surveys in Queen Charlotte Sound and Hecate Strait are conducted
-in odd numbered years and the West Coast of Vancouver Island (WCVI) and the
-West Coast of Haida Gwaii surveys are conducted in even numbered years. In
-addition to the bottom trawl surveys, two Hard Bottom Longline (HBLL) surveys
-are conducted, one in "inside" waters (east of Vancouver Island) and another in
-"outside" waters (everything else). Each year the surveys alternate between
-northern and southern areas (the northern areas were surveyed in 2019). Lastly,
-a coast-wide longline trap survey targeting sablefish is conducted every year.
-In addition to the random depth-stratified surveys, the Groundfish Section
-collects additional information from the International Pacific Halibut
-Commission (IPHC) Setline Survey. In 2020, the West Coast Haida Gwaii trawl
-survey, HBLL south survey, the IPHC setline survey, and the sablefish survey
-were conducted. The WCVI survey did not run due to COVID-19.
+Pacific Coast. Synoptic trawl surveys in Queen Charlotte Sound and Hecate
+Strait are conducted in odd numbered years and the West Coast of Vancouver
+Island (WCVI) and the West Coast of Haida Gwaii (WCHG) surveys are conducted in
+even numbered years. In addition to the bottom trawl surveys, two Hard Bottom
+Longline (HBLL) surveys are conducted, one in "inside" waters (east of
+Vancouver Island) and another in "outside" waters (everything else). Each year
+the surveys alternate between northern and southern areas (the northern areas
+were surveyed in 2019). Lastly, a coast-wide longline trap survey targeting
+sablefish is conducted every year. In addition to the random depth-stratified
+surveys, DFO collects additional information from the International Pacific
+Halibut Commission (IPHC) Setline Survey. In 2020, the synoptic WCHG trawl
+survey, HBLL south survey, IPHC setline survey, and sablefish survey were
+conducted. The synoptic WCVI survey did not run due to COVID-19.
+
+# A state-space model of groundfish stock status
 
 Recent amendments to the *Fisheries Act* via the Fish Stocks provisions have
-resulted in an increased focus on stock status with respect to biological
-reference points.
+resulted in an increased focus on stock status with respect to biological stock
+status reference points. The Precautionary Approach (PA) Framework describes
+two stock status reference points: (1) the Limit Reference Point (LRP),
+a "status below which serious harm is occurring to the stock", and (2) the
+Upper Stock Reference Point (USR), which represents the "threshold below which
+removals must be progressively reduced in order to avoid reaching the LRP"
+(REF). The USR defines the breakpoint between the healthy and cautious zone and
+the LRP defines the breakpoint between the cautious and critical zone.
 
-Scientist from the Stock Assessment and Research Division conduct regular stock
+Scientists from the Stock Assessment and Research Division conduct regular stock
 assessment of major fish stocks in BC. These assessments take into account...
 and assess status with respect to reference points...
 
@@ -166,8 +174,8 @@ Main results here; quick bullets for now
   considerable variation within some stocks (e.g., Pacific Cod, Walleye
   Pollock, and Redstripe Rockfish stocks)
 
-- Overall mean B/LRP is estimated to be `r med1(blrp$.value)` (95% CI: `r
-  lwr1(blrp$.value)`--`r upr1(blrp$.value)`) in 2020, and we note
+- Overall mean B/LRP is estimated to be `r med1(blrp$.value)`
+  (95% CI: `r lwr1(blrp$.value)`--`r upr1(blrp$.value)`) in 2020, and we note
   the increased uncertainty in the last few years due to not all assessments
   being current (Figure \@ref(fig:overall)).
 
@@ -177,10 +185,11 @@ Main results here; quick bullets for now
 
 -  `r sum(p_thresh$p_usr > 0.25)`/`r nrow(p_thresh)` in Figure
   \@ref(fig:ridges) stocks had > 25% probability of being below their USR as of
-  the last date of assessment
+  the last date of assessment with the range between the LRP and USR defined as
+  the "Cautious Zone" in the PA Framework.
 
 ```{r pcod, include=FALSE}
-pcod3cd <- filter(p_thresh, stock_clean == "Pacific Cod 3CD") %>% pull(p_lrp)
+pcod3cd <- dplyr::filter(p_thresh, stock_clean == "Pacific Cod 3CD") %>% pull(p_lrp)
 pcod3cd <- sprintf("%.1f", round(pcod3cd * 100, 1))
 ```
 
@@ -213,16 +222,28 @@ work here...
 
 (ref:fig-ridges) Posterior distribution of three measures of stock status.
 Stocks are arranged in order of assessment with the most recent assessments at
-the top; years in the first column represent the year of the assessment (NOTE
+the top; years in the first column represent the year the status represents (NOTE
 SOME HAVE PROJECTIONS!?). Colours represent the mean B/LRP value. The x-axis
 has been square-root transformed two slightly compress high ratio values for
 visualization. Stocks with missing data in the B/B~MSY~ column are assessments
 where historical reference points were chosen instead of MSY-based reference
-points.
-Vertical dashed lines are at values of 1.0 in all columns and also at values of 0.4 and 0.8 in the B/B~MSY~ column.
+points. Vertical dashed lines are at values of 1.0 in all columns and also at
+values of 0.4 and 0.8 in the B/B~MSY~ column.
 
 ```{r ridges, fig.cap = "(ref:fig-ridges)", out.width="4.2in", fig.align="center", fig.pos="ht"}
 include_graphics(here("figs/ridges.pdf"))
+```
+
+(ref:fig-ts-lrp) Trends in B/LRP for 24 groundfish stocks in BC. Coloured lines
+and ribbons represent the individual stocks. Dark coloured lines and shaded
+ribbons represent output from stock assessments: trajectories of median B/LRP
+95% quantile credible intervals. Thin lines represent draws from the posterior
+distribution of $y_{j,t}$ (latent stock-specific mean trends; colours) and
+$x_t$ (latent overall mean trend; grey). The overall mean trend ($x_t$; grey)
+is the same across panels.
+
+```{r ts-lrp, fig.cap = "(ref:fig-ts-lrp)", out.width="5in", fig.align="center", fig.pos="ht"}
+include_graphics(here("figs/blrp-x-t.pdf"))
 ```
 
 (ref:fig-overall) Overall mean biomass status ($x_t$) for B/LRP, B/USR, and
@@ -232,33 +253,5 @@ posterior.
 
 ```{r overall, fig.cap = "(ref:fig-overall)", out.width="3.5in", fig.align="center", fig.pos="ht"}
 include_graphics(here("figs/ts-summary.pdf"))
-```
-
-
-(ref:fig-ts-lrp) Trends in B/LRP for 24 groundfish stocks in BC. Coloured lines
-and ribbons represent the individual stocks. Dark coloured lines and shaded ribbons
-represent output from stock assessments: trajectories of median B/LRP 95%
-quantile credible intervals. Thin lines represent draws from the posterior
-distribution of $y_{j,t}$ (latent stock-specific mean trends; colours) and $x_t$
-(latent overall mean trend; grey). The overall mean trend ($x_t$; grey) is the same
-across panels.
-
-```{r ts-lrp, fig.cap = "(ref:fig-ts-lrp)", out.width="5in", fig.align="center", fig.pos="ht"}
-include_graphics(here("figs/blrp-x-t.pdf"))
-```
-
-(ref:fig-ts-usr) Same as Figure \@ref(fig:ts-lrp) but for B/USR. WILL NEED TO
-PICK ONE OF FIGURES 3--5 OR COMBINE THEM SOMEHOW
-
-```{r ts-usr, fig.cap = "(ref:fig-ts-usr)", out.width="5in", fig.align="center", fig.pos="ht"}
-include_graphics(here("figs/busr-x-t.pdf"))
-```
-
-(ref:fig-ts-bbmsy) Same as Figure \@ref(fig:ts-lrp) but for B/B~MSY~. Stocks
-with missing data are assessments where historical reference points were chosen
-instead of MSY-based reference points.
-
-```{r ts-bbmsy, fig.cap = "(ref:fig-ts-bbmsy)", out.width="5in", fig.align="center", fig.pos="ht"}
-include_graphics(here("figs/bbmsy-x-t.pdf"))
 ```
 
