--- a/text/refs.bib
+++ b/text/refs.bib
@@ -1,3 +1,11 @@
+@Article{         dfo2009PA,
+  title         = {A Fishery Decision-Making Framework Incorporating the
+                  {Precautionary Approach}
+                  {\url{https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/precaution-back-fiche-eng.htm}}},
+  author        = {{DFO}},
+  year          = {2009}
+}
+
 @article{carpenter2017,
   title = {Stan: {{A Probabilistic Programming Language}}},
   author = {Carpenter, Bob and Gelman, Andrew and Hoffman, Matthew D. and Lee, Daniel and Goodrich, Ben and Betancourt, Michael and Brubaker, Marcus and Guo, Jiqiang and Li, Peter and Riddell, Allen},
